kubernetes/clusters/homelab/apps/nginx-playground/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: playground
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
