kubernetes/clusters/homelab/apps/nginx-playground/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: playground
spec:
  ingressClassName: infra-traefik
  rules:
    - host: nginx.lab.hddq.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
